# vex-instantiate

./: cabal.project  vex-instantiate.cabal
